<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_screen">Main screen</string>
    <string name="add_client">Add client</string>

    <string name="no_clients">No clients added so far</string>

    <string name="weight">Weight</string>
    <string name="date_of_birth">DOB</string>
    <string name="date_of_birth_full">Date Of Birth</string>
    <string name="tap_to_select_date_of_birth">Tap to select Date of Birth</string>
    <string name="edit">Edit</string>

    <string name="weight_units_lb">lb</string>
    <string name="weight_units_kg">kg</string>

    <string name="enter_body_weight">Enter body weight</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="photo">Photo</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="done">Done</string>

    <string name="pick_photo">Pick photo</string>
    <string name="remove_photo">Remove photo</string>

    <string name="error_storage_permission_denied">Storage permission denied</string>
    <string name="error_invalid_file_format">Invalid file format</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_gallery_app_not_found">Gallery app not found</string>

    <string name="not_specified">Not specified</string>
</resources>