<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:theme="@style/Theme.Clients"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="112dp"
        android:layout_height="144dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#cccccc" />

    <TextView
        android:id="@+id/text_weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:textAppearance="@style/AppTextAppearance.Secondary"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/image_photo"
        app:layout_constraintTop_toTopOf="@id/image_photo" />

    <TextView
        android:id="@+id/text_weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTextAppearance.Primary"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_weight_title"
        app:layout_constraintTop_toBottomOf="@id/text_weight_title"
        tools:text="200lb" />

    <TextView
        android:id="@+id/text_birthdate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_of_birth"
        android:textAppearance="@style/AppTextAppearance.Secondary"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/image_photo"
        app:layout_constraintTop_toBottomOf="@id/text_weight_value" />

    <TextView
        android:id="@+id/text_birthdate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/AppTextAppearance.Primary"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_birthdate_title"
        app:layout_constraintTop_toBottomOf="@id/text_birthdate_title"
        tools:text="May 15, 1999" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_edit"
        style="@style/AppButton.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:text="@string/edit"
        app:layout_constraintStart_toEndOf="@id/image_photo"
        app:layout_constraintTop_toBottomOf="@id/text_birthdate_value" />

</androidx.constraintlayout.widget.ConstraintLayout>